--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -8,20 +8,48 @@ a, div, span{
 	font-family: "Microsoft YaHei", 微软雅黑, SimSun, 黑体;  }
 	select, input { vertical-align:middle; }
 	
-.wrap { width:1000px; margin:0 auto; }
-.secondNav{border-top: 3px solid #0e8ef4;
+.wrap { 
+	width:1000px;
+	margin:0 auto; }
+.secondNav{
+    border-top: 3px solid #0e8ef4;
     overflow: hidden;
     height: 78px;
     background-color: #F2F2F2;
     margin-bottom: 17px;}
-.secondNav_title{    float: left;    overflow: hidden;    margin: 0px 10px; display:block;}
-.secondNav_leftTitle{ width: 80px;  padding: 20px 0px; float: left;}
-.secondNav_leftTitleCN{    text-align: center;     font-size: 20px;     color:#0e8ef4;}
-.secondNav_leftTitleEN{    text-align: center;     font-size: 10px;     color:#0e8ef4; text-decoration: none;}
-.secondNav_rightTitle{    font-size: 14px;    color:#0e8ef4;    padding: 15px 0px;    float: left; text-decoration: none;}
-.secondNav_rightContent a{    margin-left: 5px;    color: #333; text-decoration: none;}
-.secondNav_rightContent a:hover{    color: #0e8ef4;}
-html, body, ul, li,  dl, dd, h2,img,span { margin:0; padding:0; }
+.secondNav_title{    
+	float: left;    
+	overflow: hidden;    
+	margin: 0px 10px; 
+	display:block;}
+.secondNav_leftTitle{ 
+	width: 80px;  
+	padding: 20px 0px; 
+	float: left;}
+.secondNav_leftTitleCN{    
+	text-align: center;     
+	font-size: 20px;     
+	color:#0e8ef4;}
+.secondNav_leftTitleEN{    
+	text-align: center;     
+	font-size: 10px;     
+	color:#0e8ef4; 
+	text-decoration: none;}
+.secondNav_rightTitle{    
+	font-size: 14px;    
+	color:#0e8ef4;    
+	padding: 15px 0px;    
+	float: left; 
+	text-decoration: none;}
+.secondNav_rightContent a{    
+	margin-left: 5px;    
+	color: #333; 
+	text-decoration: none;}
+.secondNav_rightContent a:hover{    
+	color: #0e8ef4;}
+html, body, ul, li,  dl, dd, h2,img,span { 
+	margin:0; padding:0; 
+	}
 
 </style>
 
